refactor: make MinioFileStorage getObjects unmodifiable